--- a/client/app/parts/head.html
+++ b/client/app/parts/head.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<!-- <base href="/"> -->
-	<title><!--#echo var="title" --></title>
-	<meta name="description" content="Startup HTML template OptimizedHTML 5">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link rel="icon" href="images/favicon.png">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-	<link rel="stylesheet" href="css/app.min.css">
-</head>
-<body>
+	<head>
+		<meta charset="utf-8" />
+		<!-- <base href="/"> -->
+		<title><!--#echo var="title" --></title>
+		<meta name="description" content="Startup HTML template OptimizedHTML 5" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+		/>
+		<link rel="icon" href="images/favicon.png" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+		/>
+		<link rel="stylesheet" href="css/app.min.css" />
+	</head>
+	<body>
+	<script>
+		if (location.pathname === "/admin.html")
+			document.body.style.background = "#F5F6FA";
+	</script>
