Added and update admin pages

--- a/client/app/admin.html
+++ b/client/app/admin.html
@@ -4,7 +4,149 @@
 
 <div class="admin-main">
 	<!--#include virtual="/parts/admin-burger.html" -->
-	<!--#include virtual="/parts/headers/admin-header.html" -->
+	<div class="center-admin">
+		<!--#include virtual="/parts/headers/admin-header.html" -->
+		<div class="info-site">
+			<div class="info-item">
+				<div class="info-item-block">
+					<div>Total User</div>
+					<div>125</div>
+				</div>
+				<svg
+					width="60"
+					height="60"
+					viewBox="0 0 60 60"
+					fill="none"
+					xmlns="http://www.w3.org/2000/svg"
+				>
+					<path
+						opacity="0.21"
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M0 30V37C0 49.7025 10.2975 60 23 60H30H37C49.7025 60 60 49.7025 60 37V30V23C60 10.2975 49.7025 0 37 0H30H23C10.2975 0 0 10.2975 0 23V30Z"
+						fill="#8280FF"
+					/>
+					<path
+						opacity="0.587821"
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M20.666 23.3333C20.666 26.2789 23.0538 28.6667 25.9993 28.6667C28.9449 28.6667 31.3327 26.2789 31.3327 23.3333C31.3327 20.3878 28.9449 18 25.9993 18C23.0538 18 20.666 20.3878 20.666 23.3333ZM33.9993 28.6667C33.9993 30.8758 35.7902 32.6667 37.9993 32.6667C40.2085 32.6667 41.9993 30.8758 41.9993 28.6667C41.9993 26.4575 40.2085 24.6667 37.9993 24.6667C35.7902 24.6667 33.9993 26.4575 33.9993 28.6667Z"
+						fill="#8280FF"
+					/>
+					<path
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M25.9778 31.3333C19.6826 31.3333 14.5177 34.5687 14.0009 40.9323C13.9727 41.2789 14.6356 42 14.97 42H36.9956C37.9972 42 38.0128 41.194 37.9972 40.9333C37.6065 34.3909 32.3616 31.3333 25.9778 31.3333ZM45.2746 42L40.1333 42C40.1333 38.9988 39.1417 36.2291 37.4683 34.0008C42.0103 34.0505 45.7189 36.3469 45.998 41.2C46.0092 41.3955 45.998 42 45.2746 42Z"
+						fill="#8280FF"
+					/>
+				</svg>
+			</div>
+			<div class="info-item">
+				<div class="info-item-block">
+					<div>Total Deposit</div>
+					<div>$2,225</div>
+				</div>
+				<svg
+					width="60"
+					height="60"
+					viewBox="0 0 60 60"
+					fill="none"
+					xmlns="http://www.w3.org/2000/svg"
+				>
+					<path
+						opacity="0.21"
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M0 30V37C0 49.7025 10.2975 60 23 60H30H37C49.7025 60 60 49.7025 60 37V30V23C60 10.2975 49.7025 0 37 0H30H23C10.2975 0 0 10.2975 0 23V30Z"
+						fill="#FEC53D"
+					/>
+					<path
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M15 24.3165L27.9005 31.7646C28.0394 31.8448 28.1851 31.9027 28.3333 31.9395V46.3847L15.9201 39.0385C15.3498 38.701 15 38.0876 15 37.4249V24.3165ZM45 24.1185V37.4249C45 38.0876 44.6502 38.701 44.0799 39.0385L31.6667 46.3847V31.8129C31.6969 31.7978 31.7269 31.7817 31.7566 31.7646L45 24.1185Z"
+						fill="#FEC53D"
+					/>
+					<path
+						opacity="0.499209"
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M15.4043 20.7014C15.5619 20.5024 15.7608 20.3343 15.9926 20.2108L29.1176 13.2201C29.6686 12.9266 30.3295 12.9266 30.8805 13.2201L44.0055 20.2108C44.1843 20.306 44.3434 20.4277 44.4791 20.5697L30.089 28.8778C29.9943 28.9325 29.9071 28.995 29.8276 29.064C29.7481 28.995 29.6609 28.9325 29.5662 28.8778L15.4043 20.7014Z"
+						fill="#FEC53D"
+					/>
+				</svg>
+			</div>
+			<div class="info-item">
+				<div class="info-item-block">
+					<div>Premium Users</div>
+					<div>27</div>
+				</div>
+				<svg
+					width="60"
+					height="60"
+					viewBox="0 0 60 60"
+					fill="none"
+					xmlns="http://www.w3.org/2000/svg"
+				>
+					<path
+						opacity="0.21"
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M0 30V37C0 49.7025 10.2975 60 23 60H30H37C49.7025 60 60 49.7025 60 37V30V23C60 10.2975 49.7025 0 37 0H30H23C10.2975 0 0 10.2975 0 23V30Z"
+						fill="#A402CD"
+					/>
+					<path
+						d="M30 37.221L39.3326 43.4442L36.2232 32.5558L44 26.3326H34.6674L30 17L25.3326 26.3326H16L23.7768 32.5558L20.6674 43.4442L30 37.221Z"
+						fill="#A402CD"
+						stroke="#A402CD"
+						stroke-width="0.83"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+					/>
+				</svg>
+			</div>
+			<div class="info-item">
+				<div class="info-item-block">
+					<div>Pending Withdraw</div>
+					<div>$525</div>
+				</div>
+				<svg
+					width="60"
+					height="60"
+					viewBox="0 0 60 60"
+					fill="none"
+					xmlns="http://www.w3.org/2000/svg"
+				>
+					<path
+						opacity="0.3"
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M0 30V37C0 49.7025 10.2975 60 23 60H30H37C49.7025 60 60 49.7025 60 37V30V23C60 10.2975 49.7025 0 37 0H30H23C10.2975 0 0 10.2975 0 23V30Z"
+						fill="#FF9066"
+					/>
+					<path
+						opacity="0.78"
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M28.6319 23.8089C28.6519 23.5484 28.8692 23.3472 29.1304 23.3472H29.5482C29.8051 23.3472 30.0202 23.5418 30.0458 23.7974L30.6674 30.0139L35.0821 32.5366C35.2379 32.6256 35.3341 32.7913 35.3341 32.9707V33.3592C35.3341 33.6889 35.0206 33.9284 34.7025 33.8416L28.3994 32.1226C28.168 32.0595 28.014 31.841 28.0324 31.6019L28.6319 23.8089Z"
+						fill="#FF9066"
+					/>
+					<path
+						opacity="0.901274"
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M22.7218 14.9844C22.4577 14.6697 21.9477 14.7901 21.8524 15.1898L20.2189 22.0379C20.1412 22.3636 20.3993 22.6721 20.7336 22.6531L27.7783 22.2539C28.1892 22.2306 28.3976 21.7486 28.133 21.4333L26.3316 19.2865C27.4965 18.8884 28.7317 18.6805 30 18.6805C36.2592 18.6805 41.3333 23.7546 41.3333 30.0139C41.3333 36.2731 36.2592 41.3472 30 41.3472C23.7408 41.3472 18.6667 36.2731 18.6667 30.0139C18.6667 28.9631 18.809 27.934 19.0864 26.9448L16.5188 26.2246C16.1808 27.4298 16 28.7007 16 30.0139C16 37.7459 22.268 44.0139 30 44.0139C37.732 44.0139 44 37.7459 44 30.0139C44 22.2819 37.732 16.0139 30 16.0139C28.0551 16.0139 26.2029 16.4104 24.5197 17.1271L22.7218 14.9844Z"
+						fill="#FF9066"
+					/>
+				</svg>
+			</div>
+		</div>
+		<div class="notification">
+			<div class="title-admin">Notifications</div>
+			<div class="notif-block">
+				<div>User Anton Chef deposited <strong>$25</strong></div>
+			</div>
+		</div>
+	</div>
 </div>
 
 <!--#include virtual="/parts/popups.html" -->
