Added admin pages

--- a/client/app/admin-user-page.html
+++ b/client/app/admin-user-page.html
@@ -4,9 +4,80 @@
 
 <div class="admin-main">
 	<!--#include virtual="/parts/admin-burger.html" -->
-	<div class="center-admin">
+	<div class="center-admin-2">
 		<!--#include virtual="/parts/headers/admin-header.html" -->
-		<div></div>
+		<div class="user-info">
+			<div class="user-back">
+				<svg
+					width="45"
+					height="26"
+					viewBox="0 0 45 26"
+					fill="none"
+					xmlns="http://www.w3.org/2000/svg"
+				>
+					<path
+						d="M0 13L16.0714 26V16.25H45V9.75H16.0714V0L0 13Z"
+						fill="#515559"
+						fill-opacity="0.3"
+					/>
+				</svg>
+			</div>
+			<div class="user-main-info">
+				<div class="user-main-info_left">
+					<img src="./icons/admin-profile.svg" alt="avatar" />
+					<div>
+						<div>Anton Chef</div>
+						<div>antonchef.223@gmail.com</div>
+						<div>Registered: 18/08/2024</div>
+					</div>
+				</div>
+				<div class="user-main-info_right">
+					<div>
+						<div>Premium</div>
+						<div>YES</div>
+					</div>
+					<div>
+						<div>Balance</div>
+						<div>$11160</div>
+					</div>
+				</div>
+			</div>
+			<div class="user-adv-info">
+				<div>
+					<div class="active">Deposit History</div>
+					<div>Withdraw History</div>
+					<div>Trades History</div>
+				</div>
+				<div>
+					<table>
+						<thead>
+							<tr>
+								<th>Date</th>
+								<th>Time</th>
+								<th>Amount</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>18.08.24</td>
+								<td>13:27</td>
+								<td>+25$</td>
+							</tr>
+							<tr>
+								<td>18.08.24</td>
+								<td>13:27</td>
+								<td>+25$</td>
+							</tr>
+							<tr>
+								<td>18.08.24</td>
+								<td>13:27</td>
+								<td>+25$</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
