--- a/client/app/admin-user.html
+++ b/client/app/admin-user.html
@@ -1,4 +1,4 @@
-<!--#set var="title" value="Admin Panel - Main" -->
+<!--#set var="title" value="Admin Panel - Users" -->
 <!--#include virtual="/parts/head.html" -->
 <!--#include virtual="/icons/dist/sprites.html" -->
 
