--- a/client/app/admin-announce.html
+++ b/client/app/admin-announce.html
@@ -1,12 +1,64 @@
-<!--#set var="title" value="Admin Panel - Main" -->
+<!--#set var="title" value="Admin Panel - Announcements" -->
 <!--#include virtual="/parts/head.html" -->
 <!--#include virtual="/icons/dist/sprites.html" -->
 
 <div class="admin-main">
 	<!--#include virtual="/parts/admin-burger.html" -->
-	<div class="center-admin">
+	<div class="center-admin-2">
 		<!--#include virtual="/parts/headers/admin-header.html" -->
-		<div></div>
+		<div class="ann-block">
+			<button>Create</button>
+			<div class="ann-list">
+				<div class="ann-item">
+					<div>Deposit $500 and get a 10% bonus on your balance!</div>
+					<svg
+						width="24"
+						height="30"
+						viewBox="0 0 24 30"
+						fill="none"
+						xmlns="http://www.w3.org/2000/svg"
+					>
+						<path
+							d="M9 0L7.5 1.5H0V4.5H24V1.5H16.5L15 0H9ZM1.5 7.5V27C1.5 28.65 2.85 30 4.5 30H19.5C21.15 30 22.5 28.65 22.5 27V7.5H1.5ZM8.11523 12L12 15.8848L15.8848 12L18 14.1152L14.1152 18L18 21.8848L15.8848 24L12 20.1152L8.11523 24L6 21.8848L9.88477 18L6 14.1152L8.11523 12Z"
+							fill="#DD0000"
+							fill-opacity="0.6"
+						/>
+					</svg>
+				</div>
+				<div class="ann-item">
+					<div>Deposit $500 and get a 10% bonus on your balance!</div>
+					<svg
+						width="24"
+						height="30"
+						viewBox="0 0 24 30"
+						fill="none"
+						xmlns="http://www.w3.org/2000/svg"
+					>
+						<path
+							d="M9 0L7.5 1.5H0V4.5H24V1.5H16.5L15 0H9ZM1.5 7.5V27C1.5 28.65 2.85 30 4.5 30H19.5C21.15 30 22.5 28.65 22.5 27V7.5H1.5ZM8.11523 12L12 15.8848L15.8848 12L18 14.1152L14.1152 18L18 21.8848L15.8848 24L12 20.1152L8.11523 24L6 21.8848L9.88477 18L6 14.1152L8.11523 12Z"
+							fill="#DD0000"
+							fill-opacity="0.6"
+						/>
+					</svg>
+				</div>
+				<div class="ann-item">
+					<div>Deposit $500 and get a 10% bonus on your balance!</div>
+					<svg
+						width="24"
+						height="30"
+						viewBox="0 0 24 30"
+						fill="none"
+						xmlns="http://www.w3.org/2000/svg"
+					>
+						<path
+							d="M9 0L7.5 1.5H0V4.5H24V1.5H16.5L15 0H9ZM1.5 7.5V27C1.5 28.65 2.85 30 4.5 30H19.5C21.15 30 22.5 28.65 22.5 27V7.5H1.5ZM8.11523 12L12 15.8848L15.8848 12L18 14.1152L14.1152 18L18 21.8848L15.8848 24L12 20.1152L8.11523 24L6 21.8848L9.88477 18L6 14.1152L8.11523 12Z"
+							fill="#DD0000"
+							fill-opacity="0.6"
+						/>
+					</svg>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
