--- a/client/app/admin-withdrawal.html
+++ b/client/app/admin-withdrawal.html
@@ -1,12 +1,22 @@
-<!--#set var="title" value="Admin Panel - Main" -->
+<!--#set var="title" value="Admin Panel - Withdrawal" -->
 <!--#include virtual="/parts/head.html" -->
 <!--#include virtual="/icons/dist/sprites.html" -->
 
 <div class="admin-main">
 	<!--#include virtual="/parts/admin-burger.html" -->
-	<div class="center-admin">
+	<div class="center-admin-2">
 		<!--#include virtual="/parts/headers/admin-header.html" -->
-		<div></div>
+		<div class="withdrawal-block">
+			<div class="withdrawal-item">
+				<strong>Anton Chef</strong>
+				<span>sent a withdrawal request -</span>
+				<strong>$43</strong>
+				<div>
+					<button>Accept</button>
+					<button>Decline</button>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
