Updated help pages

--- a/client/app/help-center.html
+++ b/client/app/help-center.html
@@ -38,6 +38,10 @@
 					Guides
 				</a>
 			</div>
+			<article
+				class="post ann-block"
+				style="min-height: 1000px; display: none"
+			></article>
 		</div>
 	</div>
 </main>
