Added functional for admin panel

--- a/client/app/admin.html
+++ b/client/app/admin.html
@@ -10,7 +10,7 @@
 			<div class="info-item">
 				<div class="info-item-block">
 					<div>Total User</div>
-					<div>125</div>
+					<div id="total-user">0</div>
 				</div>
 				<svg
 					width="60"
@@ -44,7 +44,7 @@
 			<div class="info-item">
 				<div class="info-item-block">
 					<div>Total Deposit</div>
-					<div>$2,225</div>
+					<div id="total-deposit">$0</div>
 				</div>
 				<svg
 					width="60"
@@ -78,7 +78,7 @@
 			<div class="info-item">
 				<div class="info-item-block">
 					<div>Premium Users</div>
-					<div>27</div>
+					<div id="count-prem">0</div>
 				</div>
 				<svg
 					width="60"
@@ -107,7 +107,7 @@
 			<div class="info-item">
 				<div class="info-item-block">
 					<div>Pending Withdraw</div>
-					<div>$525</div>
+					<div id="count-wd">$0</div>
 				</div>
 				<svg
 					width="60"
