Update admin panel

--- a/client/app/admin-withdrawal.html
+++ b/client/app/admin-withdrawal.html
@@ -6,17 +6,7 @@
 	<!--#include virtual="/parts/admin-burger.html" -->
 	<div class="center-admin-2">
 		<!--#include virtual="/parts/headers/admin-header.html" -->
-		<div class="withdrawal-block">
-			<div class="withdrawal-item">
-				<strong>Anton Chef</strong>
-				<span>sent a withdrawal request -</span>
-				<strong>$43</strong>
-				<div>
-					<button>Accept</button>
-					<button>Decline</button>
-				</div>
-			</div>
-		</div>
+		<div class="withdrawal-block"></div>
 	</div>
 </div>
 
