--- a/client/app/admin.html
+++ b/client/app/admin.html
@@ -142,9 +142,7 @@
 		</div>
 		<div class="notification">
 			<div class="title-admin">Notifications</div>
-			<div class="notif-block">
-				<div>User Anton Chef deposited <strong>$25</strong></div>
-			</div>
+			<div class="notif-block"></div>
 		</div>
 	</div>
 </div>
