--- a/client/app/parts/headers/admin-header.html
+++ b/client/app/parts/headers/admin-header.html
@@ -1,8 +1,12 @@
 <header class="admin-header">
 	<div>
-		<img src="images/avatar.png" alt="avatar" class="user-avatar" />
+		<img
+			src="images/avatar.png"
+			alt="avatar"
+			class="user-avatar user-avatar-h"
+		/>
 		<div>
-			<div>Moni Roy</div>
+			<div class="user-name-h">...</div>
 			<div>Admin</div>
 		</div>
 	</div>
