--- a/client/app/admin-user-page.html
+++ b/client/app/admin-user-page.html
@@ -26,30 +26,30 @@
 				<div class="user-main-info_left">
 					<img src="./icons/admin-profile.svg" alt="avatar" />
 					<div>
-						<div>Anton Chef</div>
-						<div>antonchef.223@gmail.com</div>
-						<div>Registered: 18/08/2024</div>
+						<div class="user-name">...</div>
+						<div class="user-email">...</div>
+						<div class="user-reg">Registered: ../../....</div>
 					</div>
 				</div>
 				<div class="user-main-info_right">
 					<div>
 						<div>Premium</div>
-						<div>YES</div>
+						<div class="user-prem">...</div>
 					</div>
 					<div>
 						<div>Balance</div>
-						<div>$11160</div>
+						<div class="user-money">$0</div>
 					</div>
 				</div>
 			</div>
 			<div class="user-adv-info">
-				<div>
-					<div class="active">Deposit History</div>
-					<div>Withdraw History</div>
-					<div>Trades History</div>
+				<div data-tabs="tables">
+					<div data-tab="table-1" class="active">Deposit History</div>
+					<div data-tab="table-2">Withdraw History</div>
+					<div data-tab="table-3">Trades History</div>
 				</div>
 				<div>
-					<table>
+					<table data-tab-content="tables" id="table-1">
 						<thead>
 							<tr>
 								<th>Date</th>
@@ -57,23 +57,27 @@
 								<th>Amount</th>
 							</tr>
 						</thead>
-						<tbody>
+						<tbody></tbody>
+					</table>
+					<table data-tab-content="tables" id="table-2" class="hidden">
+						<thead>
 							<tr>
-								<td>18.08.24</td>
-								<td>13:27</td>
-								<td>+25$</td>
+								<th>Date</th>
+								<th>Time</th>
+								<th>Amount</th>
 							</tr>
+						</thead>
+						<tbody></tbody>
+					</table>
+					<table data-tab-content="tables" id="table-3" class="hidden">
+						<thead>
 							<tr>
-								<td>18.08.24</td>
-								<td>13:27</td>
-								<td>+25$</td>
+								<th>Date</th>
+								<th>Time</th>
+								<th>Profit</th>
 							</tr>
-							<tr>
-								<td>18.08.24</td>
-								<td>13:27</td>
-								<td>+25$</td>
-							</tr>
-						</tbody>
+						</thead>
+						<tbody></tbody>
 					</table>
 				</div>
 			</div>
