--- a/client/app/execution.html
+++ b/client/app/execution.html
@@ -121,16 +121,16 @@
 	</div>
 	<div class="execution-form">
 		<div class="execution-form__wrapper">
-			<div class="execution-form__profit">2.4%</div>
-			<div class="execution-form__pair">VINU_USDT</div>
+			<div class="execution-form__profit">0%</div>
+			<div class="execution-form__pair">..._...</div>
 			<div class="exchange">
 				<div class="exchange-field">
 					<div class="exchange-field__left">
 						<div class="exchange-field__label"><span>1.</span> Buying on</div>
-						<div class="exchange-field__name">OKX</div>
+						<div class="exchange-field__name">...</div>
 					</div>
 					<div class="exchange-field__right">
-						<div class="exchange-field__price execution-form__buy">$0.213</div>
+						<div class="exchange-field__price execution-form__buy">$0.000</div>
 						<div class="exchange-field__commission">
 							<span>***%</span>Commission
 						</div>
@@ -142,10 +142,10 @@
 				<div class="exchange-field">
 					<div class="exchange-field__left">
 						<div class="exchange-field__label"><span>2.</span> Selling on</div>
-						<div class="exchange-field__name">Gate.io</div>
+						<div class="exchange-field__name">...</div>
 					</div>
 					<div class="exchange-field__right">
-						<div class="exchange-field__price execution-form__sell">$0.219</div>
+						<div class="exchange-field__price execution-form__sell">$0.000</div>
 						<div class="exchange-field__commission">
 							<span>***%</span>Commission
 						</div>
